@@ -45,6 +45,7 @@ position_identity <- PositionIdentity$build_accessor()
 position_jitter <- PositionJitter$build_accessor()
 position_stack <- PositionStack$build_accessor()
 scale_alpha <- ScaleAlpha$build_accessor()
+scale_alpha_continuous <- ScaleAlphaContinuous$build_accessor()
 scale_area <- ScaleArea$build_accessor()
 scale_colour <- ScaleColour$build_accessor()
 scale_colour_brewer <- ScaleBrewer$build_accessor(list(variable = "\"colour\""))
