@@ -29,8 +29,9 @@ ggplot2 0.8.5 (2009-XX-XX) ----------------------------------------
   instead of the previous behaviour where scales where added as layers were
   added - this could cause problems if you layer modified the plot.
   (Implements #28)
-* scale_shape_discrete, scale_size_continuous and scale_linetype_discrete 
-  added to scales to match naming convention of all other scales (Fixes #47)
+* scale_shape_discrete, scale_size_continuous, scale_alpha and
+  scale_linetype_discrete added to scales to match naming convention of all
+  other scales (Fixes #47)
 * scale_colour_gradient, scale_colour_gradient2 & scale_colour_gradientn now
   have formatter argument to match scale_continuous
 * legends will only merge if both the title and all labels are the same.
